--- a/client/style/main.css
+++ b/client/style/main.css
@@ -99,6 +99,42 @@ body {
   transform: scale(5);
   filter: url(/img/blur.svg#blur); }
 
+.cover {
+  transform: translateZ(0);
+  -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  perspective: 1000;
+  -webkit-perspective: 1000;
+  -moz-perspective: 1000;
+  -o-perspective: 1000;
+  -ms-perspective: 1000;
+  -webkit-perspective: 600px;
+  -moz-perspective: 600px;
+  -ms-perspective: 600px;
+  -o-perspective: 600px;
+  perspective: 600px;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  background: rgba(49, 43, 44, 0); }
+  .cover.visible {
+    background: rgba(49, 43, 44, 0.5); }
+
 .nav {
   /* Positioning */
   position: absolute;
@@ -1592,6 +1628,22 @@ li.sidebar-menu-sub-list-week.prev, li.sidebar-menu-sub-list-week.next {
     height: 100%;
     content: '';
     vertical-align: middle; }
+  .profile-grid-stories::after {
+    -webkit-transition: opacity 0.3s;
+    -moz-transition: opacity 0.3s;
+    -ms-transition: opacity 0.3s;
+    -o-transition: opacity 0.3s;
+    transition: opacity 0.3s;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 0;
+    background-color: #ffc157;
+    content: "";
+    opacity: 0;
+    pointer-events: none; }
   .profile-grid-stories.alt-1 {
     background: #ff905a;
     /* Old browsers */
@@ -1675,33 +1727,70 @@ li.sidebar-menu-sub-list-week.prev, li.sidebar-menu-sub-list-week.next {
     .profile-grid-stories.wide .profile-grid-stories-story {
       font-size: 32px; }
   .profile-grid-stories.img {
-    color: #ffffff; }
+    color: #ffffff;
+    background: #443f41;
+    /* Old browsers */
+    background: -moz-linear-gradient(-45deg, #443f41 0%, #3f3a3b 100%);
+    /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, #443f41), color-stop(100%, #3f3a3b));
+    /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(-45deg, #443f41 0%, #3f3a3b 100%);
+    /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(-45deg, #443f41 0%, #3f3a3b 100%);
+    /* Opera 11.10+ */
+    background: -ms-linear-gradient(-45deg, #443f41 0%, #3f3a3b 100%);
+    /* IE10+ */
+    background: linear-gradient(135deg, #443f41 0%, #3f3a3b 100%);
+    /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$color1', endColorstr='$color2',GradientType=1 );
+    /* IE6-9 fallback on horizontal gradient */ }
   .profile-grid-stories:hover:not(.no-hover) .profile-grid-stories-story {
     color: #ffea85; }
   .profile-grid-stories:hover:not(.no-hover) .profile-grid-stories-date {
     opacity: 1;
     top: 50%; }
   .profile-grid-stories:hover:not(.no-hover)::after {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 0;
-    background-color: #ffc157;
-    content: "";
     opacity: .85; }
-  .profile-grid-stories.giant-clone .profile-grid-stories-img img {
-    -webkit-filter: blur(4px); }
-  .profile-grid-stories.giant-clone .profile-grid-stories-story {
-    font-size: 42px;
-    max-height: 100em; }
-  .profile-grid-stories.giant-clone:hover .profile-grid-stories-date {
-    opacity: 0;
-    display: none; }
-  .profile-grid-stories.giant-clone:hover::after {
-    display: none;
-    opacity: 0; }
+  .profile-grid-stories.giant-clone {
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    -ms-transform-style: preserve-3d;
+    -o-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    -webkit-animation: OpenTop 0.6s forwards ease;
+    -moz-animation: OpenTop 0.6s forwards ease;
+    -ms-animation: OpenTop 0.6s forwards ease;
+    -o-animation: OpenTop 0.6s forwards ease;
+    animation: OpenTop 0.6s forwards ease;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s;
+    -webkit-transform-origin: 50% 100%;
+    -moz-transform-origin: 50% 100%;
+    -ms-transform-origin: 50% 100%;
+    -o-transform-origin: 50% 100%;
+    transform-origin: 50% 100%; }
+    .profile-grid-stories.giant-clone .profile-grid-stories-img img {
+      -webkit-filter: blur(12px);
+      -moz-filter: blur(12px);
+      -o-filter: blur(12px);
+      -ms-filter: blur(12px);
+      filter: blur(12px); }
+    .profile-grid-stories.giant-clone .profile-grid-stories-story {
+      font-size: 42px;
+      max-height: 100em; }
+    .profile-grid-stories.giant-clone .profile-grid-stories-date {
+      opacity: 1;
+      top: 10%;
+      -webkit-transform: scale(0.5);
+      -moz-transform: scale(0.5);
+      -ms-transform: scale(0.5);
+      -o-transform: scale(0.5);
+      transform: scale(0.5); }
+    .profile-grid-stories.giant-clone:hover::after {
+      opacity: 0; }
   @media screen and (max-width: 768px) {
     .profile-grid-stories {
       width: 50%;
@@ -1732,10 +1821,39 @@ li.sidebar-menu-sub-list-week.prev, li.sidebar-menu-sub-list-week.next {
   bottom: -5px;
   z-index: 0; }
   .profile-grid-stories-img img {
+    transform: translateZ(0);
+    -webkit-transform: translateZ(0);
+    -moz-transform: translateZ(0);
+    -o-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
+    perspective: 1000;
+    -webkit-perspective: 1000;
+    -moz-perspective: 1000;
+    -o-perspective: 1000;
+    -ms-perspective: 1000;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s;
+    -webkit-filter: blur(6px);
+    -moz-filter: blur(6px);
+    -o-filter: blur(6px);
+    -ms-filter: blur(6px);
+    filter: blur(6px);
+    -webkit-transform: scale(4.2);
+    -moz-transform: scale(4.2);
+    -ms-transform: scale(4.2);
+    -o-transform: scale(4.2);
+    transform: scale(4.2);
+    filter: url(/img/blur.svg#blur);
     height: 100%;
-    width: 100%;
-    -webkit-filter: blur(1px);
-    -webkit-transform: scale(4.2); }
+    width: 100%; }
 
 .profile-grid-stories-story {
   -webkit-transition: font-size 0.5s;
@@ -1769,11 +1887,11 @@ li.sidebar-menu-sub-list-week.prev, li.sidebar-menu-sub-list-week.next {
   top: 52%;
   margin: -50px 0 0 -50px;
   opacity: 0;
-  -webkit-transition: top 0.3s;
-  -moz-transition: top 0.3s;
-  -ms-transition: top 0.3s;
-  -o-transition: top 0.3s;
-  transition: top 0.3s; }
+  -webkit-transition: top 0.5s;
+  -moz-transition: top 0.5s;
+  -ms-transition: top 0.5s;
+  -o-transition: top 0.5s;
+  transition: top 0.5s; }
 
 .profile-grid-stories-date-month {
   font-family: "futura-pt",Arial;
@@ -1855,6 +1973,24 @@ li.sidebar-menu-sub-list-week.prev, li.sidebar-menu-sub-list-week.next {
     color: #ffc157;
     background-position: 50% 80px;
     opacity: 1; }
+
+@-webkit-keyframes OpenTop {
+  25% {
+    margin-top: 30px;
+    -webkit-transform: rotateX(-20deg);
+    -webkit-animation-timing-function: ease; } }
+
+@-moz-keyframes OpenTop {
+  25% {
+    margin-top: 30px;
+    -moz-transform: rotateX(-20deg);
+    -moz-animation-timing-function: ease; } }
+
+@keyframes OpenTop {
+  25% {
+    margin-top: 30px;
+    transform: rotateX(-20deg);
+    animation-timing-function: ease; } }
 
 /* ==========================================================================
    Filepicker
