--- a/client/style/_misc.scss
+++ b/client/style/_misc.scss
@@ -16,6 +16,11 @@
 #filepicker_dialog_container {
   border:none !important;
   box-shadow:none !important;
+  width:100% !important;
+  height:100% !important;
+  padding:0 !important;
+  top:0 !important;
+  left:0 !important;
 }
 
 
