--- a/client/style/_profile.scss
+++ b/client/style/_profile.scss
@@ -261,19 +261,48 @@ $columnWidth: 20%;
       @include prefix(transition,all .5s);
       @include prefix(transform-origin,50% 100%);
 
+
       .profile-grid-stories-img {
         img {
           @include filter(blur(12px));
         }
       }
       .profile-grid-stories-story {
+        overflow-y:scroll;
         font-size:42px;
-        max-height: 100em;
+        // max-height: 66%;
+        &.scroll {
+          width: 95%;
+          margin: 0 auto;
+          padding:120px 10% 120px 10%;
+          font-size: 24px;
+          line-height: 1.4em;
+          box-sizing: border-box;
+          text-align: left;
+        max-height: 100%;
+        }
       }
       .profile-grid-stories-date {
         opacity:1;
         top:10%;
         @include transform(scale(0.5));
+      }
+
+      @media screen and (max-width: $break-md) {
+        .profile-grid-stories-story{font-size:28px}
+      }
+      @media screen and (max-width: $break-sm) {
+        .profile-grid-stories-story{
+          font-size:24px;
+          &.scroll {
+            font-size:20px;
+            width:95%;
+            padding-left:0;
+            padding-right:0;
+          }
+        }
+      }
+      @media screen and (min-width: $break-lg) {
       }
 
       &:hover {
@@ -295,6 +324,10 @@ $columnWidth: 20%;
     @media screen and (max-width: $break-sm) {
       width:100%;
       height:$rowHeight;
+      &.wide,&.large{
+        height:$rowHeight;
+        .profile-grid-stories-story{font-size:24px;}
+      } 
       .profile-grid-stories-story{font-size:24px;}
     }
     @media screen and (min-width: $break-lg) {
@@ -328,7 +361,7 @@ $columnWidth: 20%;
       z-index:2;
       display:inline-block;
       overflow:hidden;
-      max-height: 4.7em;
+      // max-height: 4.7em;
       width:80%;
       vertical-align: middle;
       text-align:center;
