--- a/client/style/main.css
+++ b/client/style/main.css
@@ -1779,8 +1779,17 @@ li.sidebar-menu-sub-list-week.prev, li.sidebar-menu-sub-list-week.next {
       -ms-filter: blur(12px);
       filter: blur(12px); }
     .profile-grid-stories.giant-clone .profile-grid-stories-story {
-      font-size: 42px;
-      max-height: 100em; }
+      overflow-y: scroll;
+      font-size: 42px; }
+      .profile-grid-stories.giant-clone .profile-grid-stories-story.scroll {
+        width: 95%;
+        margin: 0 auto;
+        padding: 120px 10% 120px 10%;
+        font-size: 24px;
+        line-height: 1.4em;
+        box-sizing: border-box;
+        text-align: left;
+        max-height: 100%; }
     .profile-grid-stories.giant-clone .profile-grid-stories-date {
       opacity: 1;
       top: 10%;
@@ -1789,6 +1798,17 @@ li.sidebar-menu-sub-list-week.prev, li.sidebar-menu-sub-list-week.next {
       -ms-transform: scale(0.5);
       -o-transform: scale(0.5);
       transform: scale(0.5); }
+    @media screen and (max-width: 768px) {
+      .profile-grid-stories.giant-clone .profile-grid-stories-story {
+        font-size: 28px; } }
+    @media screen and (max-width: 320px) {
+      .profile-grid-stories.giant-clone .profile-grid-stories-story {
+        font-size: 24px; }
+        .profile-grid-stories.giant-clone .profile-grid-stories-story.scroll {
+          font-size: 20px;
+          width: 95%;
+          padding-left: 0;
+          padding-right: 0; } }
     .profile-grid-stories.giant-clone:hover::after {
       opacity: 0; }
   @media screen and (max-width: 768px) {
@@ -1804,6 +1824,10 @@ li.sidebar-menu-sub-list-week.prev, li.sidebar-menu-sub-list-week.next {
     .profile-grid-stories {
       width: 100%;
       height: 180px; }
+      .profile-grid-stories.wide, .profile-grid-stories.large {
+        height: 180px; }
+        .profile-grid-stories.wide .profile-grid-stories-story, .profile-grid-stories.large .profile-grid-stories-story {
+          font-size: 24px; }
       .profile-grid-stories .profile-grid-stories-story {
         font-size: 24px; } }
   @media screen and (min-width: 1200px) {
@@ -1869,7 +1893,6 @@ li.sidebar-menu-sub-list-week.prev, li.sidebar-menu-sub-list-week.next {
   z-index: 2;
   display: inline-block;
   overflow: hidden;
-  max-height: 4.7em;
   width: 80%;
   vertical-align: middle;
   text-align: center;
@@ -2000,4 +2023,9 @@ li.sidebar-menu-sub-list-week.prev, li.sidebar-menu-sub-list-week.next {
 
 #filepicker_dialog_container {
   border: none !important;
-  box-shadow: none !important; }
+  box-shadow: none !important;
+  width: 100% !important;
+  height: 100% !important;
+  padding: 0 !important;
+  top: 0 !important;
+  left: 0 !important; }
