--- a/client/style/main.css
+++ b/client/style/main.css
@@ -2302,6 +2302,30 @@ li.sidebar-menu-sub-list-week.prev, li.sidebar-menu-sub-list-week.next {
     color: #726d6e;
     margin: 0;
     font-size: 32px; }
+  .story .close, .profile-grid-stories.story .close {
+    display: block;
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    width: 30px;
+    height: 30px;
+    text-decoration: none;
+    text-indent: -9999em;
+    background: #ff905a; }
+    .story .close:hover, .profile-grid-stories.story .close:hover {
+      background: #f46640; }
+  .story .edit, .profile-grid-stories.story .edit {
+    display: block;
+    position: absolute;
+    top: 8px;
+    right: 46px;
+    width: 30px;
+    height: 30px;
+    text-decoration: none;
+    text-indent: -9999em;
+    background: #25b399; }
+    .story .edit:hover, .profile-grid-stories.story .edit:hover {
+      background: #53ecce; }
   @media screen and (max-width: 768px) {
     .story .story-text, .story .profile-grid-stories-story, .profile-grid-stories.story .story-text, .profile-grid-stories.story .profile-grid-stories-story {
       font-size: 28px; } }
